src/objects/XLR8_Insurance__c.object
<CustomObject>
    <description>XLR8 custom object to track Individual Insurance Policies for Household Clients.</description>
    <fields>
        <fullName>Adult_Day_Care__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adult Day Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Premium__c</fullName>
        <label>Annualized Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Appraised_Value__c</fullName>
        <label>Appraised Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>As_Sold_Crediting_Rate__c</fullName>
        <label>As-Sold Crediting Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Assisted_Living_Facility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assisted Living Facility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Bodily_Injury__c</fullName>
        <label>Auto Bodily Injury</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auto_Medical_Payments__c</fullName>
        <label>Auto Medical Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Auto_Property_Damage__c</fullName>
        <label>Auto Property Damage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Basic_Death_Benefit__c</fullName>
        <inlineHelpText>Death Benefit amount excluding riders</inlineHelpText>
        <label>Basic Death Benefit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Benefit_Duration__c</fullName>
        <label>Benefit Duration</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefits_Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Benefits Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bodily_Injury__c</fullName>
        <label>Bodily Injury</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Carrier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Entity_Sub_Type__c</field>
                <operation>equals</operation>
                <value>Carrier/Provider</value>
            </filterItems>
            <filterItems>
                <field>Account.Active_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Insurance (Carrier)</relationshipLabel>
        <relationshipName>IndividualInsurance2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Co_Insured_Individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Insured Individual</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Entity__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Individual Insurance (Co-Insured Individual)</relationshipLabel>
        <relationshipName>Individual_Insurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Co_Insured_Risk_Class_Classification__c</fullName>
        <label>Co-Insured Risk Class Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Standard Non Tobacco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Plus Non Tobacco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred Non Tobacco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred Plus Non Tobacco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super Preferred Non Tobacco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uninsurable Non Tobacco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Tobacco</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Co_Insured_Table_Rating__c</fullName>
        <label>Co-Insured Table Rating</label>
        <picklist>
            <picklistValues>
                <fullName>75% - Preferred - Preferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100% - Standard - Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>125% - Table A - Table 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150% - Table B - Table 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>175% - Table C - Table 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200% - Table D - Table 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>225% - Table E - Table 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250% - Table F - Table 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>275% - Table G - Table 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300% - Table H - Table 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>325% - Table I - Table 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>350% - Table J - Table 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>375% - Table K - Table 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>400% - Table L - Table 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>425% - Table M - Table 13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>450% - Table N - Table 14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>475% - Table O - Table 15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500% - Table P - Table 16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>525% - Table Q - Table 17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>550% - Table R - Table 18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>575% - Table S - Table 19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>600% - Table T - Table 20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>625% - Table U - Table 21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>650% - Table V - Table 22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>675% - Table W - Table 23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>700% - Table X - Table 24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>725% - Table Y - Table 25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>750% - Uninsurable - Uninsurable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Co_Insured_Tobacco_Class__c</fullName>
        <label>Co-Insured Tobacco Class</label>
        <picklist>
            <picklistValues>
                <fullName>Non-Smoker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smoker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Co_Pay_Office_Visits__c</fullName>
        <label>Co-Pay Office Visits</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Pay_Prescriptions__c</fullName>
        <label>Co-Pay Prescriptions</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Assignment__c</fullName>
        <inlineHelpText>Indicate the assignee and date of assignment when the policy is being used as collateral on a financial obligation.</inlineHelpText>
        <label>Collateral Assignment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collision_Deductible__c</fullName>
        <label>Collision Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Conversion_Option_Expiration_Date__c</fullName>
        <label>Conversion Option Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Convertible__c</fullName>
        <label>Convertible</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Corporate_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the corporate plan that the Individual Insurance policy is related to.</inlineHelpText>
        <label>Corporate Plan</label>
        <referenceTo>Group_Plan__c</referenceTo>
        <relationshipLabel>Associated Policies</relationshipLabel>
        <relationshipName>Individual_Insurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cost_of_Living_Adjustment__c</fullName>
        <label>Cost of Living Adjustment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_Benefit__c</fullName>
        <label>Daily Benefit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Death_Benefit_Option__c</fullName>
        <label>Death Benefit Option</label>
        <picklist>
            <picklistValues>
                <fullName>Decreasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Death_Benefit__c</fullName>
        <inlineHelpText>The amount on a life insurance policy or pension that is payable to the beneficiary when the annuitant passes away. Also referred to as &quot;Survivor Benefit&quot; or &quot;Face Value&quot;.</inlineHelpText>
        <label>Death Benefit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <label>Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Definition_of_Disability__c</fullName>
        <inlineHelpText>Enter information such as duration for &quot;own occupation&quot; and &quot;any occupation&quot;.</inlineHelpText>
        <label>Definition of Disability</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Policy Notes</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disability_Type__c</fullName>
        <label>Disability Type</label>
        <picklist>
            <picklistValues>
                <fullName>Partial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discounts__c</fullName>
        <label>Discounts</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dividend_Option__c</fullName>
        <label>Dividend Option</label>
        <picklist>
            <picklistValues>
                <fullName>Paid Up Additions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dividend Accumulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dividend Deposits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduce Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduced Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduced Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduce Premium w/excess to Div Accum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduced Premium w/excess to Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduced Premium w/excess to Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduced Premium w/excess to PD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplemental Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Year Term Excess to Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Year Term Excess to Dividend Accumulation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Year Term Excess to PUA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Domestic_Partners_Covered__c</fullName>
        <label>Domestic Partners Covered</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dwelling_Coverage__c</fullName>
        <label>Dwelling Coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dwelling_Replacement_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dwelling Replacement Cost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Elimination_Period__c</fullName>
        <label>Elimination Period</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Individual Insurance</relationshipLabel>
        <relationshipName>Insurance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Evidence_of_Insurability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evidence of Insurability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Excess_Premium_Amount__c</fullName>
        <label>Excess Premium Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Face_Value__c</fullName>
        <label>Face Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_Annual_Out_of_Pocket_Limit__c</fullName>
        <label>Family Annual Out of Pocket Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_Deductible__c</fullName>
        <label>Family Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Family_Lifetime_Limit__c</fullName>
        <label>Family Lifetime Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flat_Extra_Amount__c</fullName>
        <label>Flat Extra Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flat_Extra_Number_of_Years__c</fullName>
        <label>Flat Extra Number of Years</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Crediting_Rate__c</fullName>
        <label>Guaranteed Crediting Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Premium_Term_End_Date__c</fullName>
        <label>Guaranteed Level Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Health_Savings_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Health Savings Account</label>
        <referenceTo>XLR8_Assets_Liabilities__c</referenceTo>
        <relationshipName>Insurance</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Home_Health_Care__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Health Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This field is used for migration purposes only. It can be hidden post migration, or if no migration will be performed.</inlineHelpText>
        <label>Import ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Annual_Out_of_Pocket_Limit__c</fullName>
        <label>Individual Annual Out of Pocket Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Individual_Deductible__c</fullName>
        <label>Individual Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Individual_Lifetime_Limit__c</fullName>
        <label>Individual Lifetime Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inflation_Protection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inflation Protection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Annual_Premium__c</fullName>
        <inlineHelpText>The original Annual premium paid for this policy at the time it was originally issued.</inlineHelpText>
        <label>Initial Annual Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insurance_Company__c</fullName>
        <label>Insurance Company</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insured_Individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person who is insured under this policy.</inlineHelpText>
        <label>Insured Individual</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Entity__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Individual Insurance (Insured Individual)</relationshipLabel>
        <relationshipName>Insured</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insured_Limit__c</fullName>
        <label>Insured Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Insured_Risk_Class_Classification__c</fullName>
        <label>Insured Risk Class Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Standard Non Tobacco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Plus Non Tobacco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred Non Tobacco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preferred Plus Non Tobacco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Super Preferred Non Tobacco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uninsurable Non Tobacco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Tobacco</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Insured_Table_Rating__c</fullName>
        <label>Insured Table Rating</label>
        <picklist>
            <picklistValues>
                <fullName>75% - Preferred - Preferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100% - Standard - Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>125% - Table A - Table 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150% - Table B - Table 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>175% - Table C - Table 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200% - Table D - Table 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>225% - Table E - Table 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250% - Table F - Table 6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>275% - Table G - Table 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>300% - Table H - Table 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>325% - Table I - Table 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>350% - Table J - Table 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>375% - Table K - Table 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>400% - Table L - Table 12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>425% - Table M - Table 13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>450% - Table N - Table 14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>475% - Table O - Table 15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500% - Table P - Table 16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>525% - Table Q - Table 17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>550% - Table R - Table 18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>575% - Table S - Table 19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>600% - Table T - Table 20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>625% - Table U - Table 21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>650% - Table V - Table 22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>675% - Table W - Table 23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>700% - Table X - Table 24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>725% - Table Y - Table 25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>750% - Uninsurable - Uninsurable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Insured_Tobacco_Class__c</fullName>
        <label>Insured Tobacco Class</label>
        <picklist>
            <picklistValues>
                <fullName>Non-Smoker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smoker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_State__c</fullName>
        <label>Issue State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minnesota</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mississippi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missouri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nebraska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nevada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Hampshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Jersey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LOA_On_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LOA On File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Liability_Limit__c</fullName>
        <label>Liability Limit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Location_of_Item__c</fullName>
        <label>Location of Item</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_of_Use_Amount__c</fullName>
        <label>Loss of Use</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lump_Sum_Payment__c</fullName>
        <inlineHelpText>This is the lump sum payment of a Life Insurance Premium that is required to be paid up front.</inlineHelpText>
        <label>Lump Sum Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Benefit__c</fullName>
        <label>Maximum Benefit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Medical_Payments_Amount__c</fullName>
        <label>Medical Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Modal_Premium_Amount__c</fullName>
        <label>Modal Premium Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Benefit__c</fullName>
        <label>Monthly Benefit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Death_Benefit__c</fullName>
        <inlineHelpText>The Net Death Benefit is the amount paid to the insured at time of death. It may be more or less than the original face value of the policy. This could be due to the client taking withdrawals, loans, increases or decreases in the death benefit over time.</inlineHelpText>
        <label>Net Death Benefit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Payroll_Premium__c</fullName>
        <label>Non Payroll Premium</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <inlineHelpText>Used to record policy notes</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Nursing_Home__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nursing Home</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Enrollment_Date__c</fullName>
        <label>Open Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Endorsements__c</fullName>
        <label>Other Endorsements</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Structures_Coverage__c</fullName>
        <label>Other Structures Coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Structures_Description__c</fullName>
        <label>Other Structures Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_than_Collision_Deductible__c</fullName>
        <label>Other than Collision Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>